Added examples list

--- a/getting-started.html
+++ b/getting-started.html
@@ -93,6 +93,29 @@
 				<li>&#127968; Home - Go to the default page for this enclosure</li>
 			</ul>
 			
+			<h2>Available Apps</h2>
+			
+			<p>
+				What good are enclosures if there's nothing to put in them? Here are
+				some apps, demos, and examples that you might find interesting:
+			</p>
+			
+			<ul>
+				<li>
+					<a href='http://altspacevr.github.io/AltspaceSDK/examples/'>
+						AltspaceVR SDK Examples</a>
+				</li>
+				<li>
+					<a href='http://altspacevr.github.io/aframe/examples/'>
+						A-Frame Examples</a>
+				</li>
+				<li>
+					<a href='http://tinyurl.com/altvrsdkapps'>
+						Community-submitted Apps
+					</a>
+				</li>
+			</ul>
+			
 		</div>
 	</body>
 </html>
