Fixed video name

--- a/getting-started.html
+++ b/getting-started.html
@@ -35,7 +35,7 @@
 			<h1>Loading Apps Into AltspaceVR</h1>
 
 			<figure>
-				<video src='assets/load app.mp4' autoplay loop></video>
+				<video src='assets/load-app.mp4' autoplay loop></video>
 				<figcaption>TL;DR</figcaption>
 			</figure>
 
