Added call to action

--- a/getting-started.html
+++ b/getting-started.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Loading Apps - AltspaceVR</title>
+		<title>Getting Started With Apps - AltspaceVR</title>
 		<style>
 			html, body {
 				margin: 0;
@@ -32,7 +32,7 @@
 	<body>
 		<div id='container'>
 
-			<h1>Loading Apps Into AltspaceVR</h1>
+			<h1>Getting Started With Apps In AltspaceVR</h1>
 
 			<figure>
 				<video src='assets/load-app.mp4' autoplay loop></video>
@@ -67,7 +67,7 @@
 			<p>
 				Think of enclosures as web browsers that can take up space. When you
 				type a regular website into an enclosure (like
-				<a href='https://altvr.com'>AltVR.com</a>), and it appears just as
+				<a href='https://altvr.com'>AltVR.com</a>), it appears just as
 				you'd expect. But type in the URL for an Altspace-enabled website
 				(a.k.a. an app), and it will display in 3d. Depending on the app,
 				you may even be able to interact with it, or with the other players.
@@ -115,6 +115,14 @@
 					</a>
 				</li>
 			</ul>
+			
+			<h2>What's Next?</h2>
+			
+			<p>
+				Has playing with the sample apps piqued your curiosity? Check out
+				our other guide on <a href='beginners-aframe.html'>How To Build Apps With
+				A-Frame</a>!
+			</p>
 			
 		</div>
 	</body>
