Fix getting started icons

--- a/getting-started.html
+++ b/getting-started.html
@@ -87,18 +87,22 @@
 			</p>
 
 			<ul>
-				<li>
-					<img class='icon' src='assets/browse.png' />
+				<li><img class='icon' src='assets/browse.png' />
 					Menu - Toggle the enclosure settings bar</li>
-				<li>
-					<img class='icon' src='assets/beam-clear.png' />
+				<li><img class='icon' src='assets/beam-clear.png' />
 					Clear - Clear the enclosure of any running app</li>
-				<li>&#9664; Back - Go to the previous page</li>
-				<li>&#9654; Forward - Go to the next page</li>
-				<li>&#10226; Refresh - Reload the current page</li>
-				<li>&#128269; Search - Search Google for the entered text</li>
-				<li>&#10006; Clear URL - Clear the contents of the URL bar</li>
-				<li>&#127968; Home - Go to the default page for this enclosure</li>
+				<li><img class='icon' src='assets/back.png' />
+					Back - Go to the previous page</li>
+				<li><img class='icon' src='assets/forward.png' />
+					Forward - Go to the next page</li>
+				<li><img class='icon' src='assets/refresh.png' />
+					Refresh - Reload the current page</li>
+				<li><img class='icon' src='assets/search.png' />
+					Search - Search Google for the entered text</li>
+				<li><img class='icon' src='assets/stop.png' />
+					Clear URL - Clear the contents of the URL bar</li>
+				<li><img class='icon' src='assets/home.png' />
+					Home - Go to the default page for this enclosure</li>
 			</ul>
 
 
